manifests/backend/courses/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: courses
  name: courses-api-service
spec:
  selector:
    app: courses-api
  ports:
  - port: 80
    targetPort: 80
